# serializer version: 1
# name: TestExportFeeds.test_export
  '''
  <?xml version="1.0" encoding="utf-8"?>
  <opml version="1.0">
    <head>
      <dateCreated>Thu, 20 Jun 2024 22:00:00 +0000</dateCreated>
      <title>Legadilo feeds export</title>
    </head>
    <body>
      
      <outline type="rss" text="Feed without a category" xmlUrl="https://example.com/feeds/no_cat.xml" htmlUrl="https://example.com" />
      
      
      <outline text="My Category">
        
        <outline type="rss" text="Feed with category" xmlUrl="https://example.com/feeds/2.xml" htmlUrl="https://example.com" />
        
      </outline>
      
    </body>
  </opml>
  
  '''
# ---
# name: TestExportFeeds.test_export_no_feed
  '''
  <?xml version="1.0" encoding="utf-8"?>
  <opml version="1.0">
    <head>
      <dateCreated>Thu, 20 Jun 2024 22:00:00 +0000</dateCreated>
      <title>Legadilo feeds export</title>
    </head>
    <body>
      
      
    </body>
  </opml>
  
  '''
# ---
